
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_8__ TYPE_2__ ;
typedef struct TYPE_7__ TYPE_1__ ;


struct TYPE_8__ {int free; int credtype; } ;
struct TYPE_7__ {TYPE_2__ parent; int * privatekey; struct TYPE_7__* username; } ;
typedef TYPE_1__ git_cred_ssh_key ;
typedef TYPE_2__ git_cred ;


 int GIT_CREDTYPE_SSH_KEY ;
 int GIT_ERROR_CHECK_ALLOC (TYPE_1__*) ;
 int assert (int) ;
 TYPE_1__* git__calloc (int,int) ;
 TYPE_1__* git__strdup (char const*) ;
 int ssh_key_free ;

int git_cred_ssh_key_from_agent(git_cred **cred, const char *username) {
 git_cred_ssh_key *c;

 assert(username && cred);

 c = git__calloc(1, sizeof(git_cred_ssh_key));
 GIT_ERROR_CHECK_ALLOC(c);

 c->parent.credtype = GIT_CREDTYPE_SSH_KEY;
 c->parent.free = ssh_key_free;

 c->username = git__strdup(username);
 GIT_ERROR_CHECK_ALLOC(c->username);

 c->privatekey = ((void*)0);

 *cred = &c->parent;
 return 0;
}
